[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-utils"
authors = [
    {name = "Ivan Ching", email = "ivan1335@gmail.com"}
]
version = "0.0.1"
description = "Personal utility functions for common workflow tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-runner",
    "jupyter"
]

[tool.pytest.ini_options]
testpaths = ["tests"]